<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/grayLight"
    android:orientation="vertical">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/relative_main">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:background="@color/riderColor"
                android:orientation="vertical"
                android:paddingRight="16dp"
                android:paddingLeft="16dp">

                <android.support.v7.widget.Toolbar
                    android:layout_marginTop="12dp"
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@color/colorToolbar"
                    app:titleTextColor="@color/colorWhite" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imageView"
                    android:layout_width="@dimen/img_profile_main"
                    android:layout_height="@dimen/img_profile_main"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:contentDescription="@string/Img_des"
                    android:src="@drawable/ic_account" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">

                    <TextView
                        android:gravity="center"
                        android:id="@+id/etName"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="Mina Aghaei Dinani"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/font_size" />


                </LinearLayout>
            </LinearLayout>

            <android.support.v7.widget.CardView
                android:id="@+id/box"
                android:layout_centerHorizontal="true"
                android:layout_width="250dp"
                android:layout_height="170dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="@dimen/cardv_margin_top"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp"
                app:cardBackgroundColor="@color/colorPrimaryLight">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/motto"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textSize="@dimen/font_size"
                    android:textColor="@color/colorBlack"
                    android:fontFamily="sans-serif-black" />
            </android.support.v7.widget.CardView>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:gravity="center_horizontal">
            <TextView
                android:id="@+id/etMail"
                android:layout_marginTop="6dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mail"
                android:textColorHint="@color/colorBlack"
                android:textColor="@color/colorBlack"
                android:drawableStart="@drawable/ic_mail_outline_black_24dp"
                android:textSize="@dimen/font_size" />

            <TextView
                android:id="@+id/etPhone"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Phone_number"
                android:textColorHint="@color/colorBlack"
                android:textColor="@color/colorBlack"
                android:drawableStart="@drawable/ic_tablet_android_black_24dp"
                android:textSize="@dimen/font_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_insert_comment_black_24dp" />

                <TextView
                    android:id="@+id/etDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Description"
                    android:textColorHint="@color/colorBlack"
                    android:textColor="@color/colorBlack"
                    android:paddingLeft="5dp"
                    android:textSize="@dimen/font_size" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</ScrollView>

